--- a/css/style.scss
+++ b/css/style.scss
@@ -158,8 +158,9 @@ h2.header {
 h3 {
 	font-family: $title-font;
 	font-size: 1.4em;
+	font-weight: 600;
 	color: $feat-gray;
-	margin: 20px;
+	margin: 20px 0 20px 0;
 }
 
 #slogan {
@@ -205,28 +206,47 @@ p {
 	margin-right: .1em;
 }
 
-.icon-container, .step-container {
+.icon-container, .step-container, .benefits-container {
 	width: 90%;
 	display: flex;
 	align-items: center;
+	flex-wrap: wrap;
 	// background-color: silver;
 }
 
 .step-item {
 	text-align: center;
+	padding: 20px;
+}
+
+.benefits-item {
+	width: 33.333%;
+	padding-top: 30px;
+}
+
+.benefits-item h3 {
+	display: inline-flex;
+	font-size: 20px;
 }
 
 .step-item img {
 	width: 100px;
 }
 
-.step-item p {
-	font-size: 16px;
+.step-item p, .benefits-item p {
+	font-size: 15px;
 	width: 300px;
 	text-align: justify;
 	hyphens: auto;
 	line-height: 30px;	
 }
+
+.benefits-item img {
+	width: 30px;
+	padding-right: 10px;
+	color: $second-color;
+}
+
 
 .text-container {
 	display: flex;
