--- a/css/style.scss
+++ b/css/style.scss
@@ -220,8 +220,8 @@ p {
 }
 
 .benefits-item {
-	width: 33.333%;
-	padding-top: 30px;
+	width: 30%;
+	padding: 20px 10px 0 0;
 }
 
 .benefits-item h3 {
