--- a/css/layout/tooltip.scss
+++ b/css/layout/tooltip.scss
@@ -9,14 +9,14 @@
 	margin-top: 15px;
 	opacity: 0;
 	transition: all .2s;
+	&:after {
+		content: "";
+		border-top: 0px solid transparent;
+		border-bottom: 15px solid transparent;
+		border-left: 15px solid rgb(90, 88, 88);
+		position: absolute;
+		right: -10px;
+		top: 0px;
+	}
 }
 
-.text_tooltip:after {
-	content: "";
-	border-top: 0px solid transparent;
-	border-bottom: 15px solid transparent;
-	border-left: 15px solid rgb(90, 88, 88);
-	position: absolute;
-	right: -10px;
-	top: 0px;
-}
