--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,195 @@
+h3 {
+  font-family: "Open Sans";
+  font-size: 1.4em;
+  font-weight: 600;
+  color: #494949;
+  margin: 20px 0 20px 0; }
+
+h2.header {
+  font-family: "Open Sans";
+  font-weight: 600;
+  font-size: 35px;
+  color: #494949;
+  text-transform: uppercase;
+  margin: 20px 0 30px 0;
+  text-align: center; }
+
+p {
+  font-family: "Open Sans";
+  font-variant: normal;
+  font-weight: 400;
+  font-size: 24px;
+  hyphens: auto;
+  text-align: justify;
+  line-height: 35px;
+  color: #494949; }
+
+.paragrafo:first-letter {
+  background-color: #494949;
+  float: left;
+  color: #FFF;
+  font-size: 2em;
+  line-height: 1.25em;
+  padding: 0 .2em;
+  border-radius: 5px;
+  margin-right: .1em; }
+
+@media (min-width: 768px) {
+  .paragrafo:first-letter {
+    font-size: 2.1em; } }
+.step-container, .benefits-container {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap; }
+  .step-container p, .benefits-container p {
+    font-size: 15px;
+    width: 300px;
+    text-align: justify;
+    hyphens: auto;
+    line-height: 30px; }
+
+* {
+  margin: 0 auto;
+  /*font-family: sans-serif;*/
+  font-weight: 400;
+  line-height: 26px; }
+
+main {
+  padding-top: 120px; }
+
+.section_info {
+  padding: 60px 60px; }
+
+a {
+  text-decoration: none; }
+
+.benefits-item {
+  width: 30%;
+  padding: 20px 10px 0 0; }
+  .benefits-item h3 {
+    display: inline-flex;
+    font-size: 20px; }
+  .benefits-item img {
+    width: 30px;
+    padding-right: 10px;
+    color: #e2444e; }
+
+#btn-contact, #btn-contact-nav {
+  text-align: center;
+  font-family: Open Sans;
+  font-weight: 600;
+  background-color: #e2444e;
+  color: #fff;
+  padding: 10px 30px;
+  border-radius: 4px;
+  border: none;
+  transition: background-color .2s;
+  outline: none;
+  cursor: pointer;
+  text-shadow: none; }
+
+#btn-contact {
+  display: block;
+  height: 60px;
+  font-size: 18px;
+  margin: 50px auto 10px; }
+  #btn-contact:hover {
+    background-color: #E2333D; }
+
+#btn-contact-nav {
+  display: initial;
+  height: 45px;
+  font-size: 14px;
+  margin-left: 100px; }
+  #btn-contact-nav:hover {
+    background-color: #E2333D; }
+
+.parallax {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1; }
+  .parallax img {
+    display: none;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    transform: translateX(-50%); }
+
+.parallax-container {
+  position: relative;
+  overflow: hidden;
+  height: 500px; }
+  .parallax-container p {
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 30px;
+    font-family: "Open Sans";
+    font-weight: 300;
+    margin-top: 380px;
+    text-shadow: 2px 2px 20px #000;
+    width: 80%;
+    /*word-spacing: 3px;*/
+    letter-spacing: 4px;
+    line-height: 40px; }
+
+#slogan {
+  font-size: 54px;
+  text-align: center;
+  line-height: 100%;
+  width: 780px;
+  color: #494949;
+  margin-top: 0;
+  padding-top: 0;
+  hyphens: auto;
+  line-height: 1.25em; }
+
+.feature {
+  color: #3379BF; }
+
+.feat-reverse {
+  background-color: #e2444e;
+  color: white; }
+
+.step-item {
+  text-align: center;
+  padding: 20px; }
+
+.step-item img {
+  width: 100px; }
+
+.text_tooltip {
+  background-color: #5a5858;
+  width: 120px;
+  text-decoration: none;
+  padding: 0px 5px;
+  position: absolute;
+  right: 60px;
+  height: 25px;
+  margin-top: 15px;
+  opacity: 0;
+  transition: all .2s; }
+  .text_tooltip:after {
+    content: "";
+    border-top: 0px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 15px solid #5a5858;
+    position: absolute;
+    right: -10px;
+    top: 0px; }
+
+footer {
+  background-color: #494949;
+  padding: 20px 0;
+  text-align: center;
+  color: #fff; }
+
 .mainHeader {
   height: 60px;
   width: 100%;
@@ -9,14 +201,6 @@
   justify-content: space-around;
   position: fixed;
   z-index: 1;
-  transition: all .3s; }
-
-.header_fixed {
-  /*font-size: 0.7em;*/
-  height: 20px; }
-
-.logo_fixed {
-  width: 75px;
   transition: all .3s; }
 
 .container-top {
@@ -57,7 +241,7 @@ main nav {
   right: 25px;
   z-index: 2; }
 
-nav .menu {
+.btn-more {
   background-color: #3379BF;
   border-radius: 50%;
   color: #fff;
@@ -67,222 +251,32 @@ nav .menu {
   text-align: center;
   width: 50px; }
 
-.nav-itens {
+.btn-more-itens {
   position: absolute;
   top: -210px;
   right: 6px;
   opacity: 0;
   transition: all .3s; }
+  .btn-more-itens a {
+    display: block;
+    margin: 10px 0;
+    color: #fff;
+    background-color: #3379BF;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    line-height: 50px; }
 
-.nav-itens a {
-  display: block;
-  margin: 10px 0;
-  color: #fff;
-  background-color: #3379BF;
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
-  text-align: center;
-  line-height: 50px; }
+.header_fixed {
+  /*font-size: 0.7em;*/
+  height: 20px; }
 
-.nav-show {
+.logo_fixed {
+  width: 75px;
+  transition: all .3s; }
+
+.btn-more-show {
   opacity: 1; }
-
-h2.header {
-  font-family: "Open Sans";
-  font-weight: 600;
-  font-size: 35px;
-  color: #494949;
-  text-transform: uppercase;
-  margin: 20px 0 30px 0;
-  text-align: center; }
-
-#slogan {
-  font-size: 54px;
-  text-align: center;
-  line-height: 100%;
-  width: 780px;
-  color: #494949;
-  margin-top: 0;
-  padding-top: 0;
-  hyphens: auto;
-  line-height: 1.25em; }
-
-.feature {
-  color: #3379BF; }
-
-.feat-reverse {
-  background-color: #e2444e;
-  color: white; }
-
-.text_tooltip {
-  background-color: #5a5858;
-  width: 120px;
-  text-decoration: none;
-  padding: 0px 5px;
-  position: absolute;
-  right: 60px;
-  height: 25px;
-  margin-top: 15px;
-  opacity: 0;
-  transition: all .2s; }
-
-.text_tooltip:after {
-  content: "";
-  border-top: 0px solid transparent;
-  border-bottom: 15px solid transparent;
-  border-left: 15px solid #5a5858;
-  position: absolute;
-  right: -10px;
-  top: 0px; }
-
-.benefits-item {
-  width: 30%;
-  padding: 20px 10px 0 0; }
-
-.benefits-item h3 {
-  display: inline-flex;
-  font-size: 20px; }
-
-.benefits-item img {
-  width: 30px;
-  padding-right: 10px;
-  color: #e2444e; }
-
-.step-item {
-  text-align: center;
-  padding: 20px; }
-
-.step-item img {
-  width: 100px; }
-
-#btn-contact, #btn-contact-nav {
-  text-align: center;
-  font-family: Open Sans;
-  font-weight: 600;
-  background-color: #e2444e;
-  color: #fff;
-  padding: 10px 30px;
-  border-radius: 4px;
-  border: none;
-  transition: background-color .2s;
-  outline: none;
-  cursor: pointer;
-  text-shadow: none; }
-
-#btn-contact {
-  display: block;
-  height: 60px;
-  font-size: 18px;
-  margin: 50px auto 10px; }
-
-#btn-contact-nav {
-  display: initial;
-  height: 45px;
-  font-size: 14px;
-  margin-left: 100px; }
-
-#btn-contact:hover, #btn-contact-nav:hover {
-  background-color: #E2333D; }
-
-.parallax-container {
-  position: relative;
-  overflow: hidden;
-  height: 500px; }
-
-.parallax {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1; }
-
-.parallax-container p {
-  color: #fff;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 30px;
-  font-family: "Open Sans";
-  font-weight: 300;
-  margin-top: 380px;
-  text-shadow: 2px 2px 20px #000;
-  width: 80%;
-  /*word-spacing: 3px;*/
-  letter-spacing: 4px;
-  line-height: 40px; }
-
-.parallax img {
-  display: none;
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  transform: translateX(-50%); }
-
-* {
-  margin: 0 auto;
-  /*font-family: sans-serif;*/
-  font-weight: 400;
-  line-height: 26px; }
-
-main {
-  padding-top: 120px; }
-
-h3 {
-  font-family: "Open Sans";
-  font-size: 1.4em;
-  font-weight: 600;
-  color: #494949;
-  margin: 20px 0 20px 0; }
-
-.section_info {
-  padding: 60px 60px; }
-
-a {
-  text-decoration: none; }
-
-p {
-  font-family: "Open Sans";
-  font-variant: normal;
-  font-weight: 400;
-  font-size: 24px;
-  hyphens: auto;
-  text-align: justify;
-  line-height: 35px;
-  color: #494949; }
-
-.paragrafo:first-letter {
-  background-color: #494949;
-  float: left;
-  color: #FFF;
-  font-size: 2em;
-  line-height: 1.25em;
-  padding: 0 .2em;
-  border-radius: 5px;
-  margin-right: .1em; }
-
-.step-container, .benefits-container {
-  width: 90%;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap; }
-
-.step-item p, .benefits-item p {
-  font-size: 15px;
-  width: 300px;
-  text-align: justify;
-  hyphens: auto;
-  line-height: 30px; }
-
-@media (min-width: 768px) {
-  .paragrafo:first-letter {
-    font-size: 2.1em; } }
-footer {
-  background-color: #494949;
-  padding: 20px 0;
-  text-align: center;
-  color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
