--- a/css/global/global.scss
+++ b/css/global/global.scss
@@ -1,8 +1,10 @@
 * {
-	margin: 0 auto;
-	/*font-family: sans-serif;*/
-	font-weight: 400;
-	line-height: 26px;
+	@media(min-width: $tablets){
+		margin: 0 auto;
+		/*font-family: sans-serif;*/
+		font-weight: 400;
+		line-height: 26px;
+	}
 }
 
 main {
