--- a/css/navigation/header.scss
+++ b/css/navigation/header.scss
@@ -12,6 +12,11 @@
 	transition: all .3s;
 }
 
+.header_fixed {
+	/*font-size: 0.7em;*/
+	height: 20px;
+}
+
 .container-top {
 	width: 100%;
 	margin: 0 auto;
@@ -20,8 +25,4 @@
 	/*justify-content: space-between;*/
 }
 
-.logo {
-	width: 150px;
-	transition: all .3s;
-}
 
