--- a/css/navigation/menu.scss
+++ b/css/navigation/menu.scss
@@ -7,13 +7,16 @@
 
 
 .mainHeader-nav-link {
-	padding: 15px;
-	color: #494949;
-	text-decoration: none;
-	transition: .5s;
-	display: block;
-	text-transform: uppercase;
-	font-family: 'Open Sans';
+	display: none;
+	@media(min-width: $tablets){
+		padding: 15px;
+		color: #494949;
+		text-decoration: none;
+		transition: .5s;
+		display: block;
+		text-transform: uppercase;
+		font-family: 'Open Sans';
+	}
 }
 
 @media(min-width: 769px){
@@ -31,47 +34,4 @@ main nav {
 	bottom: 25px;
 	right: 25px;
 	z-index: 2;
-}
-
-.btn-more {
-	background-color: $main-color;
-	border-radius: 50%;
-	color: #fff;
-	cursor: pointer;
-	height: 50px;
-	line-height: 60px;
-	text-align: center;
-	width: 50px;
-}
-
-.btn-more-itens {
-	position: absolute;
-	top: -210px;
-	right: 6px;
-	opacity: 0;
-    transition: all .3s;
-    
-    a {
-        display: block;
-        margin: 10px 0;
-        color: #fff;
-        background-color: $main-color;
-        border-radius: 50%;
-        height: 40px;
-        width: 40px;
-        text-align: center;
-        line-height: 50px;
-    }
-}
-.header_fixed {
-	/*font-size: 0.7em;*/
-	height: 20px;
-}
-.logo_fixed {
-	width: 75px;
-	transition: all .3s;
-}
-
-.btn-more-show {
-	opacity: 1;
 }
