--- a/css/style.scss
+++ b/css/style.scss
@@ -1,12 +1,13 @@
 @import 'variaveis';
 
-@import 'content/typography';
+@import 'content/buttons';
 @import 'content/containers';
+@import 'content/logo';
+@import 'content/typography';
 
 @import 'global/global';
 
 @import 'layout/benefits-container';
-@import 'layout/buttons';
 @import 'layout/parallax';
 @import 'layout/slogan';
 @import 'layout/step-container';
