--- a/css/variaveis.scss
+++ b/css/variaveis.scss
@@ -1,7 +1,11 @@
+// COLORS
 $main-color: #3379BF;
 $second-color: #e2444e;
 $feat-gray: #494949;
 $text: #555;
+
+
+// FONTS
 
 // $title-font: 'Droid Serif', serif;
 // $body-font: 'Lato', sans-serif;
@@ -10,3 +14,11 @@ $text: #555;
 $title-font: 'Open Sans';
 $body-font: 'Open Sans';
 $parallax-font: 'Open Sans';
+
+// MEDIA-QUERIES
+
+$iPhone: 320px;
+$phones: 480px;
+$tablets: 768px;
+$desktops: 992px;
+$wide-screen: 1200px;
