--- a/css/navigation/header.scss
+++ b/css/navigation/header.scss
@@ -1,15 +1,16 @@
 .mainHeader{
+	width: 300px;
 	height: 60px;
-	width: 100%;
 	background-color: #fff;
 	border-bottom: solid $main-color;
-	padding: 20px 0;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
+	padding: 20px 10px;
 	position: fixed;
 	z-index: 1;
 	transition: all .3s;
+	
+	@media(min-width: $phones){
+		width: 100%;
+	}
 }
 
 .header_fixed {
@@ -18,11 +19,10 @@
 }
 
 .container-top {
-	width: 100%;
 	margin: 0 auto;
 	display: flex;
 	align-items: center;
-	/*justify-content: space-between;*/
+	justify-content: space-between;
 }
 
 
