--- a/css/navigation/menu.scss
+++ b/css/navigation/menu.scss
@@ -1,8 +1,11 @@
 .mainHeader-nav {
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
-	margin-right: 20px;
+	display: none;
+	@media(min-width: $tablets){
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+		margin-right: 20px;
+	}
 }
 
 
