Completing the form style

--- a/css/content/buttons.scss
+++ b/css/content/buttons.scss
@@ -27,7 +27,7 @@
 #btn-contact-nav {
 		// display: initial;
 		margin-right: 10px;
-	@media(min-width: $phones){
+	@media(min-width: $phone){
 		height: 45px;
 		font-size: 14px;
 		// margin-left: 100px;
