--- a/css/content/form.scss
+++ b/css/content/form.scss
@@ -1,17 +1,59 @@
-form label {
-		font-family: $body-font;
-		color: $feat-gray;
-		font-size: 15px;
-		width: 300px;
-		text-align: justify;
-		hyphens: auto;
-		line-height: 30px;	
+.contact-container {
+	@media(min-width: $tablet){
+		display: block;
+		padding: 20px;
+		// margin-bottom: 20px;
+		background-color:whitesmoke;
+		border: 1px solid $border;
+		border-radius: 6px;
+		width: 355px;
+	}
 }
 
 #contact-form {
-    @media(min-width: $tablets){
-        display: flex;
-        width: 400px;
-        flex-wrap: wrap;
+    @media(min-width: $tablet){
+		padding: 10px;
+        width: 300px;
+        // display: flex;
+		// flex-wrap: wrap;
     }
 }
+
+.form-group {
+	margin-bottom: 20px;
+}
+
+form {
+	label {
+		display: inline-block;
+		margin-bottom: 5px;
+		font-size: 14px;
+		font-weight: 600;
+		color: $feat-gray;
+	}
+
+	input {
+		height: 40px;
+		// padding: 12px 16px;
+	}
+
+	textarea {
+		height: 200px;
+	}
+
+	input, textarea {
+		display: block;
+		width: 100%;
+		font-size: 17px;
+		border-radius: 4px;	
+		border: 1px solid $border;
+		padding: 0 10px;
+		// margin: 0;
+	}
+
+	label, input, textarea {
+		font-family: $body-font;
+	}
+}
+
+
