--- a/css/content/typography.scss
+++ b/css/content/typography.scss
@@ -37,7 +37,7 @@ p {
 	border-radius: 5px;
 	margin-right: .1em;
 	
-	@media (min-width: 768px){
+	@media (min-width: $tablet){
 		font-size: 2.1em;
 	}
 }
