--- a/css/style.css
+++ b/css/style.css
@@ -71,20 +71,42 @@
     hyphens: auto;
     line-height: 30px; }
 
-form label {
-  font-family: "Open Sans";
-  color: #494949;
-  font-size: 15px;
-  width: 300px;
-  text-align: justify;
-  hyphens: auto;
-  line-height: 30px; }
+@media (min-width: 768px) {
+  .contact-container {
+    display: block;
+    padding: 20px;
+    background-color: whitesmoke;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    width: 355px; } }
 
 @media (min-width: 768px) {
   #contact-form {
-    display: flex;
-    width: 400px;
-    flex-wrap: wrap; } }
+    padding: 10px;
+    width: 300px; } }
+
+.form-group {
+  margin-bottom: 20px; }
+
+form label {
+  display: inline-block;
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #494949; }
+form input {
+  height: 40px; }
+form textarea {
+  height: 200px; }
+form input, form textarea {
+  display: block;
+  width: 100%;
+  font-size: 17px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  padding: 0 10px; }
+form label, form input, form textarea {
+  font-family: "Open Sans"; }
 
 .logo {
   width: 115px; }
