--- a/css/variaveis.scss
+++ b/css/variaveis.scss
@@ -3,6 +3,7 @@ $main-color: #3379BF;
 $second-color: #e2444e;
 $feat-gray: #494949;
 $text: #555;
+$border: #ddd;
 
 
 // FONTS
@@ -18,7 +19,7 @@ $parallax-font: 'Open Sans';
 // MEDIA-QUERIES
 
 $iPhone: 320px;
-$phones: 480px;
-$tablets: 768px;
-$desktops: 992px;
+$phone: 480px;
+$tablet: 768px;
+$desktop: 992px;
 $wide-screen: 1200px;
