--- a/css/navigation/header.scss
+++ b/css/navigation/header.scss
@@ -1,4 +1,5 @@
 .mainHeader{
+	
 	width: 300px;
 	height: 60px;
 	background-color: #fff;
@@ -14,8 +15,10 @@
 }
 
 .header_fixed {
-	/*font-size: 0.7em;*/
-	height: 20px;
+	@media(min-width: $tablet){
+		height: 30px;
+		padding: 20px 10px 40px 10px;
+	}
 }
 
 .container-top {
