fixed var "feat-grey" name

--- a/css/variaveis.scss
+++ b/css/variaveis.scss
@@ -1,7 +1,7 @@
 // COLORS
 $main-color: #3379BF;
 $second-color: #e2444e;
-$feat-gray: #494949;
+$feat-grey: #494949;
 $text: #555;
 $border: #ddd;
 
