--- a/css/content/typography.scss
+++ b/css/content/typography.scss
@@ -2,7 +2,7 @@ h3 {
 	font-family: $title-font;
 	font-size: 1.4em;
 	font-weight: 600;
-	color: $feat-gray;
+	color: $feat-grey;
 	margin: 20px 0 20px 0;
 }
 
@@ -10,7 +10,7 @@ h2.header {
 	font-family: $title-font;
 	font-weight: 600;
 	font-size: 35px;
-	color: $feat-gray;
+	color: $feat-grey;
 	text-transform: uppercase;
 	margin: 20px 0 30px 0;
 	text-align: center;
@@ -24,11 +24,11 @@ p {
 	hyphens: auto;
 	text-align: justify;
 	line-height: 35px;
-	color: $feat-gray;
+	color: $feat-grey;
 }
 
 .paragrafo:first-letter {
-	background-color: $feat-gray;
+	background-color: $feat-grey;
 	float: left;
 	color: #FFF;
 	font-size: 2em;
