--- a/css/layout/slogan.scss
+++ b/css/layout/slogan.scss
@@ -16,7 +16,7 @@
 		// text-align: center;
 		line-height: 100%;
 		width: 780px;
-		color: $feat-gray;
+		color: $feat-grey;
 		// margin-top: 0;
 		// padding-top: 0;
 		hyphens: auto;
