--- a/css/style.css
+++ b/css/style.css
@@ -29,15 +29,36 @@
   #btn-contact-nav:hover {
     background-color: #E2333D; }
 
+.step-container, .benefits-container {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap; }
+  .step-container p, .benefits-container p {
+    font-size: 15px;
+    width: 300px;
+    text-align: justify;
+    hyphens: auto;
+    line-height: 30px; }
+
+.nav-mobile {
+  position: fixed;
+  z-index: 2;
+  bottom: 25px;
+  right: 25px; }
+
 .btn-more {
   background-color: #3379BF;
   border-radius: 50%;
   color: #fff;
   cursor: pointer;
-  height: 50px;
-  line-height: 60px;
-  text-align: center;
-  width: 50px; }
+  height: 56px;
+  width: 56px;
+  line-height: 70px;
+  text-align: center; }
+
+.btn-more img {
+  width: 30px; }
 
 .btn-more-itens {
   position: absolute;
@@ -58,18 +79,6 @@
 
 .btn-more-show {
   opacity: 1; }
-
-.step-container, .benefits-container {
-  width: 90%;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap; }
-  .step-container p, .benefits-container p {
-    font-size: 15px;
-    width: 300px;
-    text-align: justify;
-    hyphens: auto;
-    line-height: 30px; }
 
 @media (min-width: 768px) {
   .contact-container {
@@ -336,11 +345,5 @@ footer {
     color: #3379BF; } }
 .nav-link-selected {
   border-bottom: 1px solid #494949; }
-
-main nav {
-  position: fixed;
-  bottom: 25px;
-  right: 25px;
-  z-index: 2; }
 
 /*# sourceMappingURL=style.css.map */
