--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@
 
 @import 'content/buttons';
 @import 'content/containers';
+@import 'content/float-btn';
 @import 'content/form';
 @import 'content/logo';
 @import 'content/typography';
