--- a/css/content/float-btn.scss
+++ b/css/content/float-btn.scss
@@ -1,8 +1,8 @@
 .nav-mobile {
 	position: fixed;
 	z-index: 2;
-	bottom: 25px;
-	right: 25px;
+	bottom: 2%;
+	right: 2%;
 	@media(min-width: $tablet){
 	}
 }
