--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-#btn-contact, #btn-contact-nav {
+.btn-contact, #btn-contact-nav {
   text-align: center;
   font-family: Open Sans;
   font-weight: 600;
@@ -12,12 +12,15 @@
   cursor: pointer;
   text-shadow: none; }
 
-#btn-contact {
+.btn-contact {
   display: block;
   height: 60px;
   font-size: 18px;
-  margin: 50px auto 10px; }
-  #btn-contact:hover {
+  margin: 20px auto 10px; }
+  @media (min-width: 768px) {
+    .btn-contact {
+      margin: 50px auto 10px; } }
+  .btn-contact:hover {
     background-color: #E2333D; }
 
 #btn-contact-nav {
@@ -36,16 +39,19 @@
   flex-wrap: wrap; }
   .step-container p, .benefits-container p {
     font-size: 15px;
-    width: 300px;
     text-align: justify;
     hyphens: auto;
-    line-height: 30px; }
+    line-height: 30px;
+    width: 90%; }
+    @media (min-width: 768px) {
+      .step-container p, .benefits-container p {
+        width: 300px; } }
 
 .nav-mobile {
   position: fixed;
   z-index: 2;
-  bottom: 25px;
-  right: 25px; }
+  bottom: 2%;
+  right: 2%; }
 
 .btn-more {
   background-color: #3379BF;
@@ -221,7 +227,10 @@ a {
 .parallax-container {
   position: relative;
   overflow: hidden;
-  height: 500px; }
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
   .parallax-container p {
     color: #fff;
     text-align: center;
@@ -229,12 +238,16 @@ a {
     font-size: 30px;
     font-family: "Open Sans";
     font-weight: 300;
-    margin-top: 380px;
     text-shadow: 2px 2px 20px #000;
     width: 80%;
     /*word-spacing: 3px;*/
     letter-spacing: 4px;
     line-height: 40px; }
+  @media (min-width: 768px) {
+    .parallax-container {
+      height: 500px; }
+      .parallax-container p {
+        margin-top: 380px; } }
 
 #slogan {
   font-size: 30px;
@@ -263,8 +276,12 @@ a {
   color: white; }
 
 .step-item {
-  text-align: center;
-  padding: 20px; }
+  text-align: center; }
+  .step-item p {
+    margin-left: 10%; }
+  @media (min-width: 768px) {
+    .step-item {
+      padding: 20px; } }
 
 .step-item img {
   width: 100px; }
