--- a/css/layout/parallax.scss
+++ b/css/layout/parallax.scss
@@ -20,6 +20,9 @@
 	position: relative;
 	overflow: hidden;
 	height: 500px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	p {
 		color: #fff;
 		text-align: center;
@@ -27,11 +30,16 @@
 		font-size: 30px;
 		font-family: $parallax-font;
 		font-weight: 300;
-		margin-top: 380px;
 		text-shadow: 2px 2px 20px #000;
 		width: 80%;
 		/*word-spacing: 3px;*/
 		letter-spacing: 4px;
 		line-height: 40px;
+	}
+	@media(min-width: $tablet){
+		height: 500px;
+		p {
+			margin-top: 380px;
+		}
 	}
 }
