--- a/css/layout/step-container.scss
+++ b/css/layout/step-container.scss
@@ -1,6 +1,12 @@
 .step-item {
 	text-align: center;
-	padding: 20px;
+	p {
+		margin-left: 10%;
+	}
+
+	@media(min-width: $tablet){
+		padding: 20px;
+	}
 }
 
 .step-item img {
