--- a/css/content/buttons.scss
+++ b/css/content/buttons.scss
@@ -18,6 +18,7 @@
 	height: 60px;
 	font-size: 18px;
 	margin: 20px auto 10px;
+	width: 100%;
 	@media(min-width: $tablet){
 		margin: 50px auto 10px;
 	}
