--- a/css/layout/benefits-container.scss
+++ b/css/layout/benefits-container.scss
@@ -1,10 +1,14 @@
 .benefits-item {
-	width: 30%;
 	padding: 20px 10px 0 0;
+	
+	@media(min-width: $phone){
+		width: 30%;
+	}
 	
 	h3{
 		display: inline-flex;
 		font-size: 20px;
+		width: 280px;
 	}
 	
 	img {
