--- a/css/content/typography.scss
+++ b/css/content/typography.scss
@@ -44,3 +44,10 @@ p {
 		font-size: 2.1em;
 	}
 }
+
+#contact p {
+	font-size: 19px;
+	line-height: 25px;
+	margin-bottom: 25px;
+	text-align: center;
+}
