--- a/css/content/form.scss
+++ b/css/content/form.scss
@@ -55,6 +55,14 @@ form {
 	}
 }
 
+
+#contact p {
+	font-size: 19px;
+	line-height: 25px;
+	margin-bottom: 25px;
+	text-align: center;
+}
+
 .feat-reverse {
 	background-color: $main-color;
 	color: white;
