added modal test

--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,7 @@
 @import 'content/float-btn';
 @import 'content/form';
 @import 'content/logo';
+@import 'content/modal';
 @import 'content/typography';
 
 @import 'global/global';
