--- a/css/content/buttons.scss
+++ b/css/content/buttons.scss
@@ -36,7 +36,7 @@
 
 #btn-contact-nav {
 		// display: initial;
-		margin-right: 10px;
+		// margin-right: 10px;
 	@media(min-width: $phone){
 		height: 45px;
 		font-size: 14px;
