--- a/css/navigation/header.scss
+++ b/css/navigation/header.scss
@@ -29,4 +29,9 @@
 	justify-content: space-between;
 }
 
-
+.icon {
+	font-size: 1.6em;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;	  
+}
