--- a/css/navigation/menu.scss
+++ b/css/navigation/menu.scss
@@ -31,3 +31,79 @@
 .nav-link-selected {
 	border-bottom: 1px solid #494949;
 }
+
+@media not all and (max-width: 600px){
+	.menu-abrir,
+	.menu-fechar{
+		display: none;
+	}
+}
+
+.menu-abrir,
+.menu-fechar{
+	background: none;
+	border: 0;
+	outline: 0;
+	-webkit-apperance: none;
+	font-size: 1.6em;
+	text-indent: -999em;
+}
+
+.menu-abrir{
+	height: 0;
+	width: .75em;
+	padding-top: .125em;
+	border-top: .375em double $main-color;
+	border-bottom: .125em solid $main-color;
+	vertical-align: middle;
+	margin: 0.5em;
+}
+
+.menu-fechar {
+	position: relative;
+	height: 1em;
+	width: 1em;
+}
+
+.menu-fechar:before {
+	content: '\00D7';
+	position: absolute;
+	top: 0;
+	left: 0;
+	text-indent: 0;
+}
+
+.button {
+	position: relative; 
+	display: block;
+	overflow: hidden;
+	width: 30px;
+	height: 30px;
+	padding: 5px;
+	
+	b {
+	  position: relative;
+	  display: block;
+	  width: 100%;
+	  height: 5px;
+	  margin: 5px auto 0;
+	  background-color: $main-color;
+	  transition: .15s ease-out;
+	  left: 0;
+	}
+	
+	&.open b{
+	
+	  &:first-child {
+		transform: rotate(42deg);
+		transform-origin: left;
+	  }
+	
+	  &:nth-child(2) { left: -120%; }
+  
+	  &:last-child {
+		transform: rotate(-42deg);
+		transform-origin: left;
+	  }
+	}
+  }
