--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,17 @@
   .btn-contact:hover {
     background-color: #E2333D; }
 
-@media (min-width: 480px) {
-  #btn-contact-nav {
-    height: 45px;
-    font-size: 14px; } }
-#btn-contact-nav:hover {
-  background-color: #E2333D; }
+#btn-contact-nav {
+  display: none; }
+  @media (min-width: 480px) {
+    #btn-contact-nav {
+      height: 45px;
+      font-size: 14px; } }
+  @media (min-width: 768px) {
+    #btn-contact-nav {
+      display: inline-block; } }
+  #btn-contact-nav:hover {
+    background-color: #E2333D; }
 
 .step-container, .benefits-container {
   width: 90%;
@@ -180,40 +185,6 @@ form label, form input, form textarea {
     bottom: 0;
     right: 0;
     background: rgba(0, 0, 0, 0.4); } }
-@media not all and (max-width: 600px) {
-  .menu-abrir,
-  .menu-fechar {
-    display: none; } }
-.menu-abrir,
-.menu-fechar {
-  background: none;
-  border: 0;
-  outline: 0;
-  -webkit-apperance: none;
-  font-size: 1.6em;
-  text-indent: -999em; }
-
-.menu-abrir {
-  height: 0;
-  width: .75em;
-  padding-top: .125em;
-  border-top: .375em double #000;
-  border-bottom: .125em solid #000;
-  vertical-align: middle;
-  margin: 0.5em; }
-
-.menu-fechar {
-  position: relative;
-  height: 1em;
-  width: 1em; }
-
-.menu-fechar:before {
-  content: '\00D7';
-  position: absolute;
-  top: 0;
-  left: 0;
-  text-indent: 0; }
-
 /* The Modal (background) */
 .modal {
   display: none;
@@ -501,6 +472,12 @@ footer {
   align-items: center;
   justify-content: space-between; }
 
+.icon {
+  font-size: 1.6em;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none; }
+
 .header-nav {
   display: none; }
   @media (min-width: 768px) {
@@ -527,5 +504,64 @@ footer {
     color: #3379BF; } }
 .nav-link-selected {
   border-bottom: 1px solid #494949; }
+
+@media not all and (max-width: 600px) {
+  .menu-abrir,
+  .menu-fechar {
+    display: none; } }
+.menu-abrir,
+.menu-fechar {
+  background: none;
+  border: 0;
+  outline: 0;
+  -webkit-apperance: none;
+  font-size: 1.6em;
+  text-indent: -999em; }
+
+.menu-abrir {
+  height: 0;
+  width: .75em;
+  padding-top: .125em;
+  border-top: 0.375em double #3379BF;
+  border-bottom: 0.125em solid #3379BF;
+  vertical-align: middle;
+  margin: 0.5em; }
+
+.menu-fechar {
+  position: relative;
+  height: 1em;
+  width: 1em; }
+
+.menu-fechar:before {
+  content: '\00D7';
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-indent: 0; }
+
+.button {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  width: 30px;
+  height: 30px;
+  padding: 5px; }
+  .button b {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 5px;
+    margin: 5px auto 0;
+    background-color: #3379BF;
+    transition: .15s ease-out;
+    left: 0; }
+  .button.open b:first-child {
+    transform: rotate(42deg);
+    transform-origin: left; }
+  .button.open b:nth-child(2) {
+    left: -120%; }
+  .button.open b:last-child {
+    transform: rotate(-42deg);
+    transform-origin: left; }
 
 /*# sourceMappingURL=style.css.map */
