--- a/css/style.scss
+++ b/css/style.scss
@@ -20,6 +20,7 @@
 @import 'navigation/footer';
 @import 'navigation/header';
 @import 'navigation/menu';
+@import 'navigation/nav-mobile';
 
 
 // .text-container {
