--- a/css/navigation/menu.scss
+++ b/css/navigation/menu.scss
@@ -8,7 +8,6 @@
 	}
 }
 
-
 .header-nav-link {
 	display: none;
 	@media(min-width: $tablet){
@@ -79,7 +78,7 @@
 	overflow: hidden;
 	width: 30px;
 	height: 30px;
-	padding: 5px;
+	padding: 5%;
 	
 	b {
 	  position: relative;
@@ -99,7 +98,7 @@
 		transform-origin: left;
 	  }
 	
-	  &:nth-child(2) { left: -120%; }
+	  &:nth-child(2) { left: -420%; }
   
 	  &:last-child {
 		transform: rotate(-42deg);
@@ -107,3 +106,11 @@
 	  }
 	}
   }
+
+.sliding-panel-content {
+	display: none;
+	position: static;
+	@media (min-width: $tablet) {
+		display: none;
+	}
+}
